# conan_gcc10_failure_showcase

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  conanfile.txt
cmake/: conan_install.cmake  macros.cmake
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
includes/module1/: module1.hpp
includes/module2/: module2.hpp
sources/: CMakeLists.txt
sources/local_test/: CMakeLists.txt  main.cpp
sources/module1/: CMakeLists.txt  module1.cpp
sources/module2/: CMakeLists.txt  modul2.cpp
unit_tests/: CMakeLists.txt
unit_tests/Module1_Tests/: module1_test.cc
